# diffusion2D

./: README.md  pyproject.toml
wolkobml_diffusion2d/: diffusion2d.py  output.py
